// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task component can render (completed) 1`] = `"   [1m[32m✔[39m[22m [2mtest task text[22m"`;

exports[`Task component can render 1`] = `"   [36m⠋[39m[39m [39m[39mtest task text[39m"`;

exports[`Task component can render with defaults 1`] = `"   [1m[32m✔[39m[22m [2mtask description[22m"`;

exports[`TaskList component can render 1`] = `
"[36m[39m
[36m ╭────────────╮[39m
 [36m│[39m [37m[1madd eslint[22m[39m [36m│[39m
[36m ╰────────────╯[39m
   [1m[32m✔[39m[22m [2mCreate Babel config file[22m
   [1m[2m✔[1m[22m [2mInstall Babel core, CLI, presets, and plugins[22m
   [1m[32m✔[39m[22m [2mCreate ESLint configuration and .eslintignore files[22m
   [1m[2m✔[1m[22m [2mAdd lint tasks to package.json[22m
   [1m[2m✔[1m[22m [2mInstall ESLint dependencies[22m

"
`;

exports[`Warning can render 1`] = `
"[33m[39m
[33m ┌─────────┐[39m
 [33m│[39m [33moops...[39m [33m│[39m
[33m └─────────┘[39m
    ↳ Hello World

      [2mPress [22m[1mENTER[22m[2m to continue[22m
"
`;

exports[`populateQueue function can only run tasks that pass condition 1`] = `
Array [
  Array [
    Object {
      "payload": 0,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 1,
      "type": "skipped",
    },
  ],
  Array [
    Object {
      "payload": 2,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 3,
      "type": "skipped",
    },
  ],
]
`;

exports[`populateQueue function can run tasks with options and dispatch task results 1`] = `
Array [
  Array [
    Object {
      "payload": 0,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 1,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 2,
      "type": "complete",
    },
  ],
]
`;

exports[`tomo add 1`] = `
"
 [36m[1m→[22m[39m [39m[36m[1ma11y[22m[39m[39m
   babel
   esdoc
   eslint
   jest
   makefile
   postcss
   webpack
"
`;

exports[`tomo add 2`] = `
"
   a11y
 [36m[1m→[22m[39m [39m[36m[1mbabel[22m[39m[39m
   esdoc
   eslint
   jest
   makefile
   postcss
   webpack
"
`;

exports[`tomo add eslint --use-react 1`] = `
"[36m[39m
[36m ╭────────────╮[39m
 [36m│[39m [37m[1madd eslint[22m[39m [36m│[39m
[36m ╰────────────╯[39m
   [1m[32m✔[39m[22m [2mCreate Babel config file[22m
   [1m[2m✔[1m[22m [2mInstall Babel core, CLI, presets, and plugins[22m
   [1m[2m✔[1m[22m [2mInstall Babel React preset[22m
   [1m[32m✔[39m[22m [2mAdd React support to Babel configuration file[22m
   [1m[32m✔[39m[22m [2mCreate ESLint configuration and .eslintignore files[22m
   [1m[2m✔[1m[22m [2mAdd lint tasks to package.json[22m
   [1m[2m✔[1m[22m [2mInstall ESLint dependencies[22m
   [1m[2m✔[1m[22m [2mInstall ESLint React plugins[22m
   [36m⠦[39m[39m [39m[39mAdd React support to ESLint configuration file[39m

"
`;

exports[`tomo add eslint 1`] = `
"[36m[39m
[36m ╭────────────╮[39m
 [36m│[39m [37m[1madd eslint[22m[39m [36m│[39m
[36m ╰────────────╯[39m
   [1m[32m✔[39m[22m [2mCreate Babel config file[22m
   [1m[2m✔[1m[22m [2mInstall Babel core, CLI, presets, and plugins[22m
   [1m[32m✔[39m[22m [2mCreate ESLint configuration and .eslintignore files[22m
   [1m[2m✔[1m[22m [2mAdd lint tasks to package.json[22m
   [1m[2m✔[1m[22m [2mInstall ESLint dependencies[22m

"
`;
